--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # Site settings
 title: "Michael W. Merriam's Academic Resume"
 description: "See Title"
+theme: resume
 
 # Build settings
 markdown: kramdown
