--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ resume_contact_address:         "12538 El Viento Rd, Clermont, FL"
 resume_header_contact_info:     "917-455-1420 • michael.merriam@ucf.edu"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but keep it brief and concise</p>"
+resume_header_intro: "<p>I specialize in curriculum innovation through game dynamics. With a core skill set that includes instructional design, educational technology integration, and game theory, I create immersive learning experiences.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
@@ -47,7 +47,7 @@ resume_section_associations:    true
 resume_social_links:
   resume_github_url:            "https://github.com/mwmxyz/academic"
   # resume_facebook_url:          "insert Facebook URL here"
-  resume_linkedin_url:          "https://www.linkedin.com/in/michaelmerriam-1"
+  resume_linkedin_url:          "https://www.linkedin.com/in/michael-merriam1/"
   # resume_instagram_url:         "insert your Instagram URL here"
   # resume_website_url:           "http://joelglovier.com"
   # resume_medium_url:            "https://medium.com/@jglovier"
