--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,12 +1,12 @@
 # Skills
 # Organizational leadership
-- skill: Organizational leadership
-  description: I have several years of experience leading organziations from community groups to business departments. From public speaking, to mentoring, to coordination of people and events, I can lead in any context.
+- skill: Educational Technology Integration
+  description: Integrating cutting-edge educational technology reshapes the classroom experience, leveraging tools that resonate with a digital-native audience, while meeting or exceeding the needs of non-student stakeholders.
 
 # Communications strategy
-- skill: Communications strategy
-  description: Content and marketing strategy,
+- skill: Immersive Space Design
+  description: Escape rooms, theatrical experiences, and experience working in film and television art departments
 
 # Digital content development and creation
-- skill: Digital content development and creation
-  description: Copy writing, graphic design, web design, front-end web development, print design
+- skill: Game Writing
+  description: Narrative Design and Narrative Direction, including methods for influencing technical departments through plain language documentation
