--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,15 @@
 # Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
+
+- degree: Master of Arts, Medieval/Renaissance Studies
+  uni: Columbia University in the City of New York
+  year: 2015
+  award: --
+  summary: --
+  
+- degree: Bachelor of Arts, Archaeology, English and Comparative Literature
+  uni: Columbia University in the City of New York
+  year: 2010 &mdash; 2014
   awards:
     - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
+  summary: Directed adaptations of literature for Columbia Radio
 
-- degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
-  award: Most likely to succeed
-  summary: You can choose to have either a single or multiple awards
