--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,17 +3,16 @@
 - company: Unknown Universirty
   position: Course Director (Writing for Games)
   duration: Dec, 2018 &mdash; Jun, 2022
-  summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
+  summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>Designed from the ground up a modular synchronous game design class</li><li>Re-designed and taught a course in Media Analysis & Criticism</li><li>(both MFA students in Creative Writing)</li></ul>
 
 # Director of Digital Stratgy
-- company: United Nations Human Rights Council
-  position: Director of Digital Strategy
-  duration:  Jun, 2010 &mdash; Sept, 2013
-  summary: If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.
-
+- company: Comets and Cockpits
+  position: Guest Writer
+  duration:  2022
+  summary: Created material for a TTRPG module, centered around an original creature with unique behaviorm backstory, and lore
 
 # Communications Coordinator
-- company: Springfield Women & Children's Center
-  position: Communications Coordinator
-  duration:   Jun, 2008  &mdash; May, 2010
-  summary: Led communication efforts across digital and traditional media channels for marketing and public relations, internal communication strategies, and coordinated support programs for the recipients of the center's services.
+- company: Fun Waffle Games
+  position: Narrative Director
+  duration: 2023
+  summary: Led narrative team, in a project that used narrative design to integrate Stable Diffusion-generated art with traditionally created assets in a historical video game
