--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,8 +3,8 @@
 - degree: Master of Arts, Medieval/Renaissance Studies
   uni: Columbia University in the City of New York
   year: 2015
-  award: --
-  summary: --
+#  award: --
+#  summary: --
   
 - degree: Bachelor of Arts, Archaeology, English and Comparative Literature
   uni: Columbia University in the City of New York
