--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,5 +1,5 @@
 # links
-- url: "#"
-  description: Springfield Jazz Enthusiasts
-- url: "#"
-  description: Springfield Young Professionals
+- url: "https://www.linkedin.com/in/michael-merriam1/"
+  description: My LinkedIn
+- url: "https://www.partlywicked.com"
+  description: Partly Wicked (an escape room blog I write for)
