--- a/_data/education.yml
+++ b/_data/education.yml
@@ -10,6 +10,6 @@
   uni: Columbia University in the City of New York
   year: 2010 &mdash; 2014
   awards:
-    - award: Summa Cumme Laude graduate
+    - award: Summa Cumme Laude 
   summary: Directed adaptations of literature for Columbia Radio
 
