--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ resume_contact_telephone:       "917-455-1420"
 resume_contact_address:         "12538 El Viento Rd, Clermont, FL"
 
 resume_header_contact_info:     "917-455-1420 • michael.merriam@ucf.edu"
-display_header_contact_info:    "false"
+display_header_contact_info:    "true"
 
 resume_header_intro: "<p>I specialize in curriculum innovation through game dynamics. With a core skill set that includes instructional design, educational technology integration, and game theory, I create immersive learning experiences.</p>"
 
@@ -29,17 +29,17 @@ resume_header_intro: "<p>I specialize in curriculum innovation through game dyna
 # "no" to display an "I'm not looking for work" message,
 # or remove the resume_looking_for_work option entirely
 # to leave blank
-resume_looking_for_work:        "yes"
+# resume_looking_for_work:        "yes"
 
 # Decide which sections to use
 # comment out to hide
 resume_section_experience:      true
 resume_section_education:       true
-resume_section_projects:        true
+# resume_section_projects:        true
 resume_section_skills:          true
-resume_section_recognition:     true
+# resume_section_recognition:     true
 resume_section_links:           true
-resume_section_associations:    true
+# resume_section_associations:    true
 # resume_section_interests:       true
 
 # Resume social links
