--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,6 +1,6 @@
 # Jobs
 # VP of Global Communications
-- company: Unknown Universirty
+- company: Full Sail University
   position: Course Director (Writing for Games)
   duration: Dec, 2018 &mdash; Jun, 2022
   summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>Designed from the ground up a modular synchronous game design class</li><li>Re-designed and taught a course in Media Analysis & Criticism</li><li>(both MFA students in Creative Writing)</li></ul>
