--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,7 +3,7 @@
 - company: Full Sail University
   position: Course Director (Writing for Games)
   duration: Dec, 2018 &mdash; Jun, 2022
-  summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>Designed from the ground up a modular synchronous game design class</li><li>Re-designed and taught a course in Media Analysis & Criticism</li><li>(both MFA students in Creative Writing)</li></ul>
+  summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>Created a modular, synchronous online Writing for Games course that taught game design skills through collaborative writing (for the Creative Writing MFA program)</li><li>Re-designed and taught the MFA Creative Writing course in Script Analysis & Criticism</li><li>Taught MFA courses in Visual Storytelling and Character Creation & Development</li><li>Taught BFA courses in Science Fiction and Children's Entertainment</li></ul>
 
 # Director of Digital Stratgy
 - company: Comets and Cockpits
