--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,8 +1,8 @@
-# Recognitions
-# - award: Outstanding Achievement
-#   organization: Springfield Young Professionals
-#  year: 2010, 2014
-#  summary: Awarded the Outstanding Achievement award for contributions made to the community and professional accomplishments.
+ Publications & Projects
+ - award: Interview with Jack Zipes
+  organization: World Literature Today
+  year: 2010, 2014
+ #  link: <https://www.worldliteraturetoday.org/blog/interviews/unvarnished-tales-brothers-grimm-conversation-jack-zipes
 
 # - award: Most Likely To Succeed
 #  organization: Springfield High School
