--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,10 +1,18 @@
  Publications & Projects
- - award: Interview with Jack Zipes
-  organization: World Literature Today
-  year: 2010, 2014
- #  link: <https://www.worldliteraturetoday.org/blog/interviews/unvarnished-tales-brothers-grimm-conversation-jack-zipes
+- award: Branch vs. Root
+organization: Games Based Learning Virtual Conference
+year: 2022
+url: "https://vimeo.com/881499662"
+description: Presentation on Skill Assessment in Gamified Learning (available through Vimeo)
 
-# - award: Most Likely To Succeed
-#  organization: Springfield High School
-#  year: 2004
-#  summary: Voted Most Likely To Succeed by a panel of my high school peers.
+- award: Haitian Literature as a Model for World Literature
+organization: World Literature Today
+year: 2015
+url: "https://mwmxyz.github.io/academic/_assets/Merriam_Haitian_is_My_Literature.pdf"
+description: Two pieces on Haitian Literature, as a PDF
+
+- award: Interview with Jack Zipes
+organization: World Literature Today
+year: 2010, 2014
+url: "https://www.worldliteraturetoday.org/blog/interviews/unvarnished-tales-brothers-grimm-conversation-jack-zipes"
+description: Available at the magazine's website
