--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,4 +1,4 @@
- Publications & Projects
+# Publications & Projects
 - award: Branch vs. Root
 organization: Games Based Learning Virtual Conference
 year: 2022
