--- a/_data/links.yml
+++ b/_data/links.yml
@@ -5,8 +5,8 @@
 - url: "https://vimeo.com/881499662"
   description: Presentation on Skill Assessments in Gamified Curricula (Games Based Learning Virtual Conference 2022, via Vimeo)
 
-- url: "https://mwmxyz.github.io/academic/_assets/Merriam_Haitian_is_My_Literature.pdf"
-  description: Haitian Literature as a Model for World Literature (2014, via PDF)
+# - url: "https://mwmxyz.github.io/academic/_assets/Merriam_Haitian_is_My_Literature.pdf"
+#   description: Haitian Literature as a Model for World Literature (2014, via PDF)
 
 - url: "https://www.worldliteraturetoday.org/blog/interviews/unvarnished-tales-brothers-grimm-conversation-jack-zipes"
   description: My interview with fairy tale expert Jack Zipes, at World Literature Today (2015)
