--- a/_data/links.yml
+++ b/_data/links.yml
@@ -12,7 +12,7 @@
   description: My interview with fairy tale expert Jack Zipes, at World Literature Today (2015)
 
 - url: "https://lareviewofbooks.org/article/adult-fairy-tales/"
-  description: Adult Fairy Tales: Interview with author Michael Cunningham, at the LA Review of Books (2015)
+  description: Adult Fairy Tales, interview with author Michael Cunningham, at the LA Review of Books (2015)
   
 # - url: "https://www.partlywicked.com"
 #  description: Partly Wicked (an escape room blog I write for)
