--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,13 +3,14 @@
 - degree: Master of Arts, Medieval/Renaissance Studies
   uni: Columbia University in the City of New York
   year: 2015
+  summary: Worked with the original manuscripts of juvenalia belonging to the Brontë siblings
 #  award: --
 #  summary: --
   
 - degree: Bachelor of Arts, Archaeology, English and Comparative Literature
-  uni: Columbia University in the City of New York
+# uni: Columbia University in the City of New York
   year: 2010 &mdash; 2014
   awards:
-    - award: Summa Cumme Laude 
-  summary: Directed adaptations of literature for Columbia Radio
+    - award: Summa cum Laude 
+  summary: Directed adaptations of literature for the university radio station
 
