--- a/_data/links.yml
+++ b/_data/links.yml
@@ -7,12 +7,6 @@
   
 - url: "https://specialagentmerriam.com/files/Merriam_Haitian_is_My_Language.pdf"
   description: Haitian Literature as a Model for World Literature (2014, via PDF)
-  
-- url: "https://www.worldliteraturetoday.org/blog/interviews/unvarnished-tales-brothers-grimm-conversation-jack-zipes"
-  description: My interview with fairy tale expert Jack Zipes, at World Literature Today (2015)
-  
-- url: "https://lareviewofbooks.org/article/adult-fairy-tales/"
-  description: Adult Fairy Tales, interview with author Michael Cunningham, at the LA Review of Books (2015)
-  
-- url: "https://www.partlywicked.com"
-  description: Partly Wicked (an escape room blog I write for)
+
+- url: "https://vimeo.com/user19077508"
+  description: King John (short film) for a screening at the Shakespeare Birthplace 2013
