--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,7 +3,8 @@
 - company: Full Sail University
   position: Course Director (Writing for Games)
   duration: Dec, 2018 &mdash; Jun, 2022
-  summary: Provided instruction for both undergraduate and graduate students in a variety of courses. Designed and delivered course materials that aligned with curriculum requirements, Leveraged multimedia tools to simulate collaborative writers' room experiences in online environments, enhancing student engagement. Re-focused all creative writing assignments and assessments toward industry skills acquisition. Prepared curriculum maps, and organized trainings on the preparation of curriculum maps for all faculty of the Creative Writing MFA program. <ul class="resume-item-list"><li>Created a modular, synchronous online Writing for Games course that taught game design skills through collaborative writing (for the Creative Writing MFA program)</li><li>Re-designed and taught the MFA Creative Writing course in Script Analysis & Criticism</li><li>Taught MFA courses in Visual Storytelling and Character Creation & Development</li><li>Taught BFA courses in Science Fiction and Children's Entertainment</li></ul>
+  summary: Designed and delivered course materials for undergraduate and graduate students that aligned with curriculum requirements.  Leveraged multimedia tools to simulate collaborative writers' room experiences in online environments, enhancing student engagement. Re-focused all creative writing assignments and assessments toward industry skills acquisition. Prepared curriculum maps, and organized trainings on the preparation of curriculum maps for all faculty of the Creative Writing MFA program.     Gained extensive knowledge of ACCSC accreditation standards through direct involvement in the accreditation process.
+    Applied best practices in curriculum development and assessment to meet and exceed academic benchmarks. Adapted teaching methods and course materials in response to evolving accreditation requirements, demonstrating flexibility and a commitment to educational excellence. <ul class="resume-item-list"><li>Created a modular, synchronous online Writing for Games course that taught game design skills through collaborative writing (for the Creative Writing MFA program)</li><li>Re-designed and taught the MFA Creative Writing course in Script Analysis & Criticism</li><li>Taught MFA courses in Visual Storytelling and Character Creation & Development</li><li>Taught BFA courses in Science Fiction and Children's Entertainment</li></ul>
 
 # Director of Digital Stratgy
 - company: Comets and Cockpits
@@ -12,7 +13,7 @@
   summary: Created material for a TTRPG module, centered around an original creature with unique behaviorm backstory, and lore
 
 # Communications Coordinator
-- company: Fun Waffle Games
-  position: Narrative Director
-  duration: 2023
-  summary: Led narrative team, in a project that used narrative design to integrate Stable Diffusion-generated art with traditionally created assets in a historical video game
+- company: Radio Theater Project
+  position: Writer
+  duration: 2018
+  summary: Adapted works of literature into radio scripts for national syndication. 
