--- a/_data/links.yml
+++ b/_data/links.yml
@@ -8,5 +8,5 @@
 - url: "https://specialagentmerriam.com/files/Merriam_Haitian_is_My_Language.pdf"
   description: Haitian Literature as a Model for World Literature (2014, via PDF)
 
-- url: "https://vimeo.com/user19077508"
+- url: "https://vimeo.com/manage/videos/68965793"
   description: King John (short film) for a screening at the Shakespeare Birthplace 2013
