--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,16 +1,16 @@
 # Projects
 # uncomment the urls if you wish to display them, and add your own URL
 
-# jazznotes.io
-# - project: jazznotes.io
-#  role: Founder & Primary Developer
-#  duration: 2012 &mdash; Present
-  # url: "#"
-#  description: Jazz Notes is an open source node/ember app that helps you keep track of your music compositions and new ideas.
+Checkmate or Chat-Bot? Leveraging AI to Gamify Classroom Learning
+- project: NeMLA (Northeast Modern Language Association) conference paper 
+  role: Author
+  duration: March 2024
+  url: "https://www.buffalo.edu/nemla/convention.html"
+  description: Paper on ludic curriculum design using AI to create personalized learning experiences, incorporating narrative for enhanced student engagement.
 
-# Springfield Community Outreach Group
-# - project: Springfield Community Outreach Group
-#  role: Co-Founder & Organizer
-#  duration: 2007 &mdash; Present
-  # url: "#"
-#  description: SCOG is a local monthly meetup in Springfield where we share opportunities to volunteer in the community and organize support for families and neighborhoods in need of assistance that the community can provide.
+Risk and Re-word - Board Game Themes as Encrypted Cognitive Tools 
+- project: NeMLA (Northeast Modern Language Association) seminar 
+  role: Author
+  duration: March 2024
+  url: "https://www.buffalo.edu/nemla/convention.html"
+  description: Developed the concept of 'ludoception' to describe a cognitive faculty honed by games, linking thematic elements with game mechanics to enhance understanding of real-world systems and social rules.
