--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,16 +1,16 @@
 # Projects
 # uncomment the urls if you wish to display them, and add your own URL
 
-Checkmate or Chat-Bot? Leveraging AI to Gamify Classroom Learning
-- project: NeMLA (Northeast Modern Language Association) conference paper 
+# Checkmate or Chat-Bot? Leveraging AI to Gamify Classroom Learning
+- project: Checkmate or Chat-Bot? Leveraging AI to Gamify Classroom Learning
   role: Author
   duration: March 2024
   url: "https://www.buffalo.edu/nemla/convention.html"
-  description: Paper on ludic curriculum design using AI to create personalized learning experiences, incorporating narrative for enhanced student engagement.
+  description: NeMLA (Northeast Modern Language Association) conference paper on ludic curriculum design using AI to create personalized learning experiences, incorporating narrative for enhanced student engagement.
 
-Risk and Re-word - Board Game Themes as Encrypted Cognitive Tools 
-- project: NeMLA (Northeast Modern Language Association) seminar 
-  role: Author
+# Risk and Re-word - Board Game Themes as Encrypted Cognitive Tools 
+- project: Risk and Re-word - Board Game Themes as Encrypted Cognitive Tools 
+  role: Author / Presenter
   duration: March 2024
   url: "https://www.buffalo.edu/nemla/convention.html"
-  description: Developed the concept of 'ludoception' to describe a cognitive faculty honed by games, linking thematic elements with game mechanics to enhance understanding of real-world systems and social rules.
+  description: NeMLA (Northeast Modern Language Association) seminar developing the concept of 'ludoception' to describe a cognitive faculty honed by games, linking thematic elements with game mechanics to enhance understanding of real-world systems and social rules.
