--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,12 +5,12 @@
 - project: Checkmate or Chat-Bot? Leveraging AI to Gamify Classroom Learning
   role: Author
   duration: March 2024
-  url: "https://www.buffalo.edu/nemla/convention.html"
+  # url: "https://www.buffalo.edu/nemla/convention.html"
   description: NeMLA (Northeast Modern Language Association) conference paper on ludic curriculum design using AI to create personalized learning experiences, incorporating narrative for enhanced student engagement.
 
 # Risk and Re-word - Board Game Themes as Encrypted Cognitive Tools 
 - project: Risk and Re-word - Board Game Themes as Encrypted Cognitive Tools 
   role: Author / Presenter
   duration: March 2024
-  url: "https://www.buffalo.edu/nemla/convention.html"
+  # url: "https://www.buffalo.edu/nemla/convention.html"
   description: NeMLA (Northeast Modern Language Association) seminar developing the concept of 'ludoception' to describe a cognitive faculty honed by games, linking thematic elements with game mechanics to enhance understanding of real-world systems and social rules.
