--- a/_data/links.yml
+++ b/_data/links.yml
@@ -10,3 +10,9 @@
 
 - url: "https://vimeo.com/manage/videos/68965793"
   description: King John (short film) for a screening at the Shakespeare Birthplace 2013
+
+- url: "https://https://thedrunkenodyssey.com/2023/08/06/587-a-discussion-of-myhouse-wad-for-doom-with-michael-merriam/"
+  description: Guest spot on the literary podcast Drunken Odyssey, discussing the video game Doom and its mod entitled 'Myhouse.wad' as works of literature
+
+- url: "https://thedrunkenodyssey.com/2020/05/30/episode-422-michael-merriam/"
+  description: Guest on the literary podcast Drunen Odyssey, discussing the film and graphic novel 'Scott Pilgrim vs. The World'
