--- a/_data/links.yml
+++ b/_data/links.yml
@@ -6,7 +6,7 @@
   description: Presentation on Skill Assessments in Gamified Curricula (Games Based Learning Virtual Conference 2022, via Vimeo)
   
 - url: "https://specialagentmerriam.com/files/Merriam_Haitian_is_My_Language.pdf"
-  description: Haitian Literature as a Model for World Literature (2014, via PDF)
+  description: Haitian Literature as a Model for the publication World Literature Today (2014, via PDF)
 
 - url: "https://vimeo.com/manage/videos/68965793"
   description: King John (short film) for a screening at the Shakespeare Birthplace 2013
