--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,10 +1,5 @@
 # Recognitions
-- award: Outstanding Achievement
-  organization: Springfield Young Professionals
-  year: 2010, 2014
-  summary: Awarded the Outstanding Achievement award for contributions made to the community and professional accomplishments.
-
-- award: Most Likely To Succeed
-  organization: Springfield High School
-  year: 2004
-  summary: Voted Most Likely To Succeed by a panel of my high school peers.
+- award: Profile in the New Yorker magazine (Talk of the Town)
+  organization: The New Yorker
+  year: 2008
+  summary: My work as editor of 'the first magazine for the iPhone' and with digital fashion photography written up in a September issue of the New Yorker magazine
