--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,6 +1,12 @@
 # Projects
 # uncomment the urls if you wish to display them, and add your own URL
 
+# Metattendance
+- project: Metattedance - Revolutionizing Attendance Policies Through The Use of Asymmetrical Policies and Player Roles in the Digital Classroom
+  role: Author / Presenter
+  duration: January 2024
+  desscription: CFA Games Conference paper, University of Kentucky
+
 # Checkmate or Chat-Bot? Leveraging AI to Gamify Classroom Learning
 - project: Checkmate or Chat-Bot? Leveraging AI to Gamify Classroom Learning
   role: Author
