--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,7 +5,7 @@
 - project: Metattedance - Revolutionizing Attendance Policies Through The Use of Asymmetrical Policies and Player Roles in the Digital Classroom
   role: Author / Presenter
   duration: January 2024
-  desscription: CFA Games Conference paper, University of Kentucky
+  desscription: CFA Games Conference paper (held at University of Kentucky) on using asymmetrical games, specifically social deduction games, for source models of presence and accountability that serve multiple different kinds of student availability. Class roles, similar to the secret roles held by players of both digital and live/physical social deduction games, can help to re-think engagement and collaboration strategies that allow for balance and fairness even while caterting to asymmetrical schedules that might normally unbalance an already asynchronous class
 
 # Checkmate or Chat-Bot? Leveraging AI to Gamify Classroom Learning
 - project: Checkmate or Chat-Bot? Leveraging AI to Gamify Classroom Learning
