--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -10,7 +10,7 @@
 - company: University of Central Florida
   position: Intructor of Record
   duration: 2023 - Present
-  summary: Created material, designed and/or updated modules, and taught an online asynchronous course Introduction to Digital Media
+  summary: Created material, designed and/or updated modules, and taught an online asynchronous courses Introduction to Digital Media and Portfolio Development (capstone course for Game Design students)
   
 # Game Writing
 - company: Comets and Cockpits
@@ -19,7 +19,7 @@
   summary: Created material for a TTRPG module, centered around an original creature with unique behaviorm backstory, and lore
   
 # Communications Coordinator
-# - company: Radio Theater Project
-#   position: Writer
-#   duration: 2018
-#   summary: Adapted works of literature into radio scripts for national syndication. 
+- company: Radio Theater Project
+  position: Writer
+  duration: 2018
+  summary: Adapted works of literature into radio scripts for national syndication. 
