--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -2,4 +2,4 @@
 - award: Profile in the New Yorker magazine (Talk of the Town)
   organization: The New Yorker
   year: 2008
-  summary: My work as editor of 'the first magazine for the iPhone' and with digital fashion photography written up in a September issue of the New Yorker magazine
+  summary: My work as editor of 'the first magazine for the iPhone' and with digital fashion photography written up in a September issue of the New Yorker magazine. https://www.newyorker.com/magazine/2008/09/29/dial-a-mag
