--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -2,10 +2,10 @@
 # uncomment the urls if you wish to display them, and add your own URL
 
 # Metattendance
-- project: Metattedance - Revolutionizing Attendance Policies Through The Use of Asymmetrical Policies and Player Roles in the Digital Classroom
+- project: Metattedance - Student as Antagonist in a Post-Attendance World
   role: Author / Presenter
   duration: January 2024
-  desscription: CFA Games Conference paper (held at University of Kentucky) on using asymmetrical games, specifically social deduction games, for source models of presence and accountability that serve multiple different kinds of student availability. Class roles, similar to the secret roles held by players of both digital and live/physical social deduction games, can help to re-think engagement and collaboration strategies that allow for balance and fairness even while caterting to asymmetrical schedules that might normally unbalance an already asynchronous class
+  desscription: CFA Games Conference, University of Kentucky on education and games. The paper focused on using asymmetrical rules in social deduction games as models for asymmetrical attendance policies, where different rules apply to different students
 
 # Checkmate or Chat-Bot? Leveraging AI to Gamify Classroom Learning
 - project: Checkmate or Chat-Bot? Leveraging AI to Gamify Classroom Learning
