--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,7 +5,7 @@
 - project: Metattedance - Student as Antagonist in a Post-Attendance World
   role: Author / Presenter
   duration: January 2024
-  description: CFA Games Conference, University of Kentucky on education and games. The paper focused on using asymmetrical rules in social deduction games as models for asymmetrical attendance policies, where different rules apply to different students
+  description: CFA Games Conference, University of Kentucky. The paper focused on using asymmetrical rules in social deduction games as models for asymmetrical attendance policies, where different rules apply to different students
 
 # Checkmate or Chat-Bot? Leveraging AI to Gamify Classroom Learning
 - project: Checkmate or Chat-Bot? Leveraging AI to Gamify Classroom Learning
