--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -8,7 +8,7 @@
   description: SIGDOC (Special Interest Group on Design of Communication) interactive poster session diagramming the potential of game balance (in the field of design) to provide new conceptual models of 'fairness' in the classroom
 
 # Metattendance
-- project: Metattedance - Student as Antagonist in a Post-Attendance World
+- project: Metattedance - Social Deduction Games as Models for Asymmetrical Policies in a Post-Attendance World
   role: Author / Presenter
   duration: January 2024
   description: CFA Games Conference, University of Kentucky. The paper focused on using asymmetrical rules in social deduction games as models for asymmetrical attendance policies, where different rules apply to different students
