--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -11,7 +11,7 @@
 - project: Metattedance - Social Deduction Games as Models for Asymmetrical Policies in a Post-Attendance World
   role: Author / Presenter
   duration: January 2024
-  description: CFA Games Conference, University of Kentucky. The paper focused on using asymmetrical rules in social deduction games as models for asymmetrical attendance policies, where different rules apply to different students
+  description: CFA Games Conference, University of Kentucky. The paper focused on using the asymmetrical rules for player roles in social deduction games as models for asymmetrical attendance policies, and for methods of including antagonistic students without needing to change their behavior or attitude.
 
 # Checkmate or Chat-Bot? Leveraging AI to Gamify Classroom Learning
 - project: Checkmate or Chat-Bot? Leveraging AI to Gamify Classroom Learning
