--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -2,7 +2,7 @@
 # uncomment the urls if you wish to display them, and add your own URL
 
 # Game Balance and Classroom Fairness
-- project: Game Balance and Classroom Fairness
+- project: Game Balance and Classroom Fairness (Poster Session)
   role: Author / Designer
   duration: October 2023
   description: SIGDOC (Special Interest Group on Design of Communication) interactive poster session diagramming the potential of game balance (in the field of design) to provide new conceptual models of 'fairness' in the classroom
