--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -18,7 +18,7 @@
   role: Author
   duration: March 2024
   # url: "https://www.buffalo.edu/nemla/convention.html"
-  description: NeMLA (Northeast Modern Language Association) conference paper on ludic curriculum design using AI to create personalized learning experiences, incorporating narrative for enhanced student engagement.
+  description: NeMLA (Northeast Modern Language Association) conference paper on ludic curriculum design using AI to create egregoric NPCs of student groups, and incorporating narrative for enhanced student engagement.
 
 # Risk and Re-word - Board Game Themes as Encrypted Cognitive Tools 
 - project: Risk and Re-word - Board Game Themes as Encrypted Cognitive Tools 
