--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -8,9 +8,9 @@
 
 # Teaching at UCF
 - company: University of Central Florida
-  position: Intructor of Record
+  position: Instructor 
   duration: 2023 - Present
-  summary: Created material, designed and/or updated modules, and taught an online asynchronous courses Introduction to Digital Media and Portfolio Development (capstone course for Game Design students)
+  summary: Created material, designed and/or updated modules, and taught courses Introduction to Digital Media and Game Design Portfolio Development 
   
 # Game Writing
 - company: Comets and Cockpits
@@ -22,4 +22,4 @@
 - company: Radio Theater Project
   position: Writer
   duration: 2018
-  summary: Adapted works of literature into radio scripts for national syndication. 
+  summary: Adapted works of literature into radio scripts for national syndication, including Timon of Athens and The Diary of Lady Murasaki.
