--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -16,7 +16,7 @@
 - company: Comets and Cockpits
   position: Guest Writer
   duration:  2022
-  summary: Created material for a TTRPG module, centered around an original creature with unique behaviorm backstory, and lore
+  summary: Created material for a TTRPG module, centered around an original creature with unique behavior, backstory, and lore
   
 # Communications Coordinator
 - company: Radio Theater Project
