--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -28,7 +28,7 @@
   description: NeMLA (Northeast Modern Language Association) seminar developing the concept of 'ludoception' to describe a cognitive faculty honed by games, linking thematic elements with game mechanics to enhance understanding of real-world systems and social rules.
 
 # Equity Quest
-- project: The Scales of Gmaification
+- project: The Scales of Gamification
   role: Author / Presenter
   duration: June 2024
   description: Virtual-Based Games in Education Conference, synchronous online presentation about incorporating real-world inequalities into the design of gamified modules.
