--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ resume_header_intro: "<p>I specialize in curriculum innovation through game dyna
 # or remove the resume_looking_for_work option entirely
 # to leave blank
 
-resume_looking_for_work:        "no"
+# resume_looking_for_work:        "no"
 
 # Decide which sections to use
 # comment out to hide
