--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -8,7 +8,7 @@
   description: SIGDOC (Special Interest Group on Design of Communication) interactive poster session diagramming the potential of game balance (in the field of design) to provide new conceptual models of 'fairness' in the classroom
 
 # Metattendance
-- project: Metattedance - Social Deduction Games as Models for Asymmetrical Policies in a Post-Attendance World
+- project: Metattendance - Social Deduction Games as Models for Asymmetrical Policies in a Post-Attendance World
   role: Author / Presenter
   duration: January 2024
   description: CFA Games Conference, University of Kentucky. The paper focused on using the asymmetrical rules for player roles in social deduction games as models for asymmetrical attendance policies, and for methods of including antagonistic students without needing to change their behavior or attitude.
