--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,6 +1,12 @@
 # Jobs
 # VP of Global Communications
 
+# Unannounced Mobile Strategy Game
+- company: Marauder Tech
+  position: Narrative Director (Unannounced Mobile Strategy Game)
+  duration: Present (ongoing)
+  summary: Reference Contact - Joel Balyeat - Chief Product Officer
+
 # Teaching at UCF
 - company: University of Central Florida
   position: Instructor 
