--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -5,7 +5,7 @@
 - company: Marauder Tech
   position: Narrative Director (Unannounced Mobile Strategy Game)
   duration: Present (ongoing)
-  summary: Reference Contact - Joel Balyeat - Chief Product Officer - joel (at) maraudertech.net
+  summary: Narrative Design, lorekeeping, and related duties. Ref. Contact - Joel Balyeat (Chief Product Officer) - joel (at) maraudertech.net
 
 # Teaching at UCF
 - company: University of Central Florida
