--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ resume_contact_address:         "12538 El Viento Rd, Clermont, FL"
 resume_header_contact_info:     "917-455-1420 • michael.merriam@ucf.edu"
 display_header_contact_info:    "true"
 
-resume_header_intro: "<p>I specialize in curriculum innovation through game dynamics. With a core skill set that includes instructional design, educational technology integration, and game theory, I create immersive learning experiences.</p>"
+resume_header_intro: "<p>My research includes the overlap between Game Writing and Game Design, specifically the ways that narrative elements (and narrative techniques) can interrogate and re-define the boundaries of what counts as Game Design. (Put more simply, at what point does Game Writing become so focused that it is indistinguishable from game design?)<p>I specialize in curriculum innovation through game dynamics. With a core skill set that includes instructional design, educational technology integration, and game theory, I create immersive learning experiences.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
