--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,6 +1,6 @@
 # Skills
 # Organizational leadership
-- skill: Educational Technology Integration
+- skill: Educational Technology Integration (Script Languages, et. al.)
   description: Integrating educational technology to reshape the classroom experience; integrating Unity and various script languages into courses in Level Design to bridge knowledge gaps and diverse fields of student expertise; leveraging tools that resonate with a digital-native audience, while meeting or exceeding the needs of non-student stakeholders.
 
 # Communications strategy
