--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -2,7 +2,7 @@
 # uncomment the urls if you wish to display them, and add your own URL
 
 # Equity Quest
-- project: The Scales of Gamification
+- project: Equity Quest
   role: Author / Presenter
   duration: June 2024
   description: Virtual-Based Games in Education Conference, synchronous online presentation about incorporating real-world inequalities into the design of gamified modules.
