--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,6 +1,13 @@
 # Projects
 # uncomment the urls if you wish to display them, and add your own URL
 
+# Undead Computer - ELO Exhibit
+- project: Undead Computer - ELO Exhibit
+  role: Designer
+  duration: July-August 2024
+  # url: "https://elo.com/undeadcomputer"
+  description: Electronic Literature Organization exhibit titled Undead Computer, a game-like meta-exhibit focused on the exploration and interactive engagement with obsolete technologies. This exhibit invites participants to interact with, modify, and repurpose aged digital technologies, challenging the conventional notions of obsolescence and utility in the digital age.
+
 # Equity Quest
 - project: Equity Quest
   role: Author / Presenter
