--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,7 +5,7 @@
 - project: Undead Computer - ELO Exhibit
   role: Designer
   duration: July-August 2024
-  # url: "https://elo.com/undeadcomputer"
+  # url: "https://undead.computer"
   description: Electronic Literature Organization exhibit titled Undead Computer, a game-like meta-exhibit focused on the exploration and interactive engagement with obsolete technologies. This exhibit invites participants to interact with, modify, and repurpose aged digital technologies, challenging the conventional notions of obsolescence and utility in the digital age.
 
 # Equity Quest
