--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -6,7 +6,7 @@
   role: Designer
   duration: July-August 2024
   # url: "https://undead.computer"
-  description: Electronic Literature Organization exhibit titled Undead Computer, a game-like meta-exhibit focused on the exploration and interactive engagement with obsolete technologies. This exhibit invites participants to interact with, modify, and repurpose aged digital technologies, challenging the conventional notions of obsolescence and utility in the digital age.
+  description: Electronic Literature Organization exhibit titled Undead Computer, a game-like meta-exhibit focused on the exploration and interactive engagement with obsolete technologies. This exhibit invites participants to interact with, modify, and repurpose the text of the website itself, while dead links and other phenomena speak to the decay of the once hopeful techno-space.
 
 # Equity Quest
 - project: Equity Quest
