--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,7 +3,7 @@
 - degree: Master of Arts, Medieval/Renaissance Studies
   uni: Columbia University in the City of New York
   year: 2015
-  summary: Worked with the original manuscripts of juvenalia belonging to the Brontë siblings
+#  summary: Worked with the original manuscripts of juvenalia belonging to the Brontë siblings
 #  award: --
 #  summary: --
   
@@ -12,5 +12,5 @@
   year: 2010 &mdash; 2014
   awards:
     - award: Summa cum Laude 
-  summary: Directed adaptations of literature for the university radio station
+#  summary: Directed adaptations of literature for the university radio station
 
