--- a/_config.yml
+++ b/_config.yml
@@ -11,19 +11,19 @@ sass:
 # Resume settings
 resume_avatar:                  "true"
 resume_name:                    "Michael W. Merriam"
-resume_title:                   "UCF, Texts & Technology"
+resume_title:                   "Independent"
 
 # used for the contact button in _layouts/resume.html
-resume_contact_email:           "michael.merriam@ucf.edu"
+resume_contact_email:           "michael.merriam@gmail.com"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
 resume_contact_telephone:       "917-455-1420"
-resume_contact_address:         "12538 El Viento Rd, Clermont, FL"
+resume_contact_address:         "713 Groveland, FL"
 
 resume_header_contact_info:     "917-455-1420 • michael.merriam@ucf.edu"
 display_header_contact_info:    "true"
 
-resume_header_intro: "<p>My research and professional interests involve the overlap of Game Writing and Game Design, specifically the ways that narrative elements (and narrative techniques) can interrogate and re-define the boundaries of what counts as Game Design. Even more specifically, this has lately involved the concept of Game Balance, which is an area less often touched on in studies of game narratives, but which could provide narrative writers a way to address directly more quantitative and computational elements of design. (Put more simply, at what point does Game Writing become so focused that it is indistinguishable from Game Design?)<p>I specialize in curriculum innovation through game dynamics. With a core skill set that includes instructional design, educational technology integration, and game theory, I create immersive learning experiences.</p>"
+resume_header_intro: "<p>My research and professional interests involve the overlap of Game Writing and Game Design, specifically the ways that Creative Writing can re-define the boundaries of what counts as Game Design. This has lately involved the concept of Game Balance, which is an area less often touched on in studies of game narratives, but which could provide narrative writers a way to address directly more quantitative and computational elements of design. (Put more simply, at what point does Game Writing become so focused that it is indistinguishable from Game Design?)<p>I specialize in curriculum innovation through game dynamics. With a core skill set that includes instructional design, educational technology integration, and game theory, I create immersive learning experiences.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
