--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,14 +3,14 @@
 
 # Unannounced Mobile Strategy Game
 - company: Marauder Tech
-  position: Narrative Director (Unannounced Mobile Strategy Game)
+  position: Narrative Director (Mobile Multiplayer Strategy Game)
   duration: Present (ongoing)
-  summary: Narrative Design, lorekeeping, and related duties. Ref. Contact - Joel Balyeat (Chief Product Officer) - joel (at) maraudertech.net
+  summary: Narrative Design, lorekeeping, and related duties. Ref. Contact - Brian Urbanek (Design Director) - Brian (at) maraudertech.net
 
 # Teaching at UCF
 - company: University of Central Florida
   position: Instructor 
-  duration: 2023 - Present
+  duration: 2023 - 2024
   summary: Created material, designed and/or updated modules, and taught courses Introduction to Digital Media and Game Design Portfolio Development 
 
 # Game Writing
@@ -21,7 +21,7 @@
   
 # FS
 - company: Full Sail University
-  position: Course Director (Writing for Games, Script Analysis and Criticism)
+  position: Course Director (Writing for Games, Script Analysis and Criticism, et. al.)
   duration: Dec, 2018 &mdash; Jun, 2022
   summary: Designed and delivered course materials for undergraduate and graduate students that aligned with curriculum requirements.  Leveraged multimedia tools to simulate collaborative writers' room experiences in online environments, enhancing student engagement. Re-focused all creative writing assignments and assessments toward industry skills acquisition. Prepared curriculum maps, and organized trainings on the preparation of curriculum maps for all faculty of the Creative Writing MFA program. Gained extensive knowledge of ACCSC accreditation standards through direct involvement in the accreditation process. Applied best practices in curriculum development and assessment to meet and exceed academic benchmarks. Adapted teaching methods and course materials in response to evolving accreditation requirements, demonstrating flexibility and a commitment to educational excellence. <ul class="resume-item-list"><li>Created a modular, synchronous online Writing for Games course that taught game design skills through collaborative writing (for the Creative Writing MFA program)</li><li>Re-designed and taught the MFA Creative Writing course in Script Analysis & Criticism</li><li>Taught MFA courses in Visual Storytelling and Character Creation & Development</li><li>Taught BFA courses in Science Fiction and Children's Entertainment</li></ul>
 
