--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,6 +1,12 @@
 # Projects
 # uncomment the urls if you wish to display them, and add your own URL
 
+# Shadow Math - ACH 2025 
+- project: Shadow Math: On Shirley Jackson and The Lottery
+  role: Author / Presenter
+  duration: June 2025
+  description: A poster and talk analyzing Shirley Jackson’s The Lottery as a hidden computational system, proposing a game design–based method for identifying algorithmic structures embedded in literature.
+
 # Undead Computer - ELO Exhibit
 - project: Undead Computer - ELO Exhibit
   role: Designer
