--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,7 +5,7 @@
 - project: Shadow Math: On Shirley Jackson and The Lottery
   role: Author / Presenter
   duration: June 2025
-  description: A poster and talk analyzing Shirley Jackson’s The Lottery as a hidden computational system, proposing a game design–based method for identifying algorithmic structures embedded in literature.
+  description: A poster and talk analyzing The Lottery as a story containing a hidden computational system
 
 # Undead Computer - ELO Exhibit
 - project: Undead Computer - ELO Exhibit
