--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -4,7 +4,7 @@
 # Unannounced Mobile Strategy Game
 - company: Marauder Tech
   position: Narrative Director (Mobile Multiplayer Strategy Game)
-  duration: Present (ongoing)
+  duration: May 2024 - Present (ongoing)
   summary: Narrative Design, lorekeeping, and related duties. Ref. Contact - Brian Urbanek (Design Director) - Brian (at) maraudertech.net
 
 # Teaching at UCF
