--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,7 +3,7 @@
 
 # Unannounced Mobile Strategy Game
 - company: Marauder Tech
-  position: Narrative Director (Mobile Multiplayer Strategy Game)
+  position: Narrative Director
   duration: May 2024 - Present (ongoing)
   summary: Narrative Design, lorekeeping, and related duties. Ref. Contact - Brian Urbanek (Design Director) - Brian (at) maraudertech.net
 
