--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -2,7 +2,7 @@
 # uncomment the urls if you wish to display them, and add your own URL
 
 # Shadow Math - ACH 2025 
-- project: Shadow Math - On Shirley Jackson and The Lottery
+- project: Shadow Math - On Shirley Jackson and The Lottery - ACH 2025
   role: Author / Presenter
   duration: June 2025
   description: A poster and talk analyzing The Lottery as a story containing a hidden computational system
