--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,7 +5,7 @@
 - project: Shadow Math - On Shirley Jackson and The Lottery - ACH 2025
   role: Author / Presenter
   duration: June 2025
-  description: A poster and talk analyzing The Lottery as a story containing a hidden computational system
+  description: A poster and talk analyzing The Lottery as a story containing a hidden computational system, and further proposing a method of using Game Design as the disciplinary lens through which to perform close readings on diegetic games found within literature
 
 # Undead Computer - ELO Exhibit
 - project: Undead Computer - ELO Exhibit
