--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -8,7 +8,7 @@
   description: A poster and talk analyzing The Lottery as a story containing a hidden computational system, and further proposing a method of using Game Design as the disciplinary lens through which to perform close readings on diegetic games found within literature
 
 # Undead Computer - ELO Exhibit
-- project: Undead Computer - ELO Exhibit
+- project: Undead Computer (undead.computer) - ELO Exhibit
   role: Designer
   duration: July-August 2024
   # url: "https://undead.computer"
