--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "Michael W. Merriam's Academic Resume"
+title: "Michael W. Merriam's Academic and Professional Resume"
 description: "See Title"
 
 # Build settings
